out/new/manifests/cattle-fleet-local-system/Deployment.fleet-agent.yaml
metadata:
  name: fleet-agent
  namespace: cattle-fleet-local-system
  labels:
    app.kubernetes.io/managed-by: Helm
    objectset.rio.cattle.io/hash: 362023f752e7f1989d8b652e029bd2c658ae7c44
  annotations:
    meta.helm.sh/release-name: fleet-agent-local
    meta.helm.sh/release-namespace: cattle-fleet-local-system
    objectset.rio.cattle.io/applied: H4sIAAAAAAAA/5RVXXOjNhT9L3omXttZ54M3CsqWWQIMdppmdjyMLC62ukKikvDGzfDfOwLs4G3GO31D0j3389zDG6rAkIIYgtw3RISQhhgmhbZHufkLqNFgJorJCSXGcJgw+YkVyEUlBzBXZAvCXG2kNNooUl/1Rlf9I5eU8Ct90AYq1DqIkw3wi553RO+Qi65v5tP5dXm7mMNtObu/uy/uNjeLOUzn95tiTm8WdwRu6efP1qkgFZyng/pLXRNqXy6mpGugNiEFNWeUaOTOHKSBAzVS2YeKGLqLTomTuv4pWGu9GEUMbA/IfWsdZKCqOTHQwUfd5b/yMuRCypIJZqw3JGQB3uhcKyhBKSiCRjGxXdIdFA1nYhtuhTxd41egjR0jcr8dMSAonArCr7UCrftBf3tD3+FwTGg0jWM3ZQ2KdP1AoUAO2hPegAUioxpA63bdOugHsO3OIHf [...]
    objectset.rio.cattle.io/id: fleet-agent-bootstrap-cattle-fleet-local-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleet-agent
  template:
    metadata:
      labels:
        app: fleet-agent
    spec:
      volumes:
      - name: kube
        emptyDir: {}
      - name: tmp
        emptyDir: {}
      containers:
      - name: fleet-agent
        image: rancher/fleet-agent:v0.15.2
        command:
        - fleetagent
        resources: {}
        volumeMounts:
        - name: kube
          mountPath: /.kube
        - name: tmp
          mountPath: /tmp
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: fleet-agent
      serviceAccount: fleet-agent
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: <DOMAIN_63>/agent
                operator: In
                values:
                - 'true'
      schedulerName: default-scheduler
      tolerations:
      - key: <DOMAIN_95>/uninitialized
        operator: Equal
        value: 'true'
        effect: NoSchedule
      - key: <DOMAIN_96>/os
        operator: Equal
        value: linux
        effect: NoSchedule
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
apiVersion: apps/v1
kind: Deployment
