out/new/manifests/cattle-fleet-local-system/NetworkPolicy.default-allow-all.yaml
metadata:
  name: default-allow-all
  namespace: cattle-fleet-local-system
  labels:
    app.kubernetes.io/managed-by: Helm
    objectset.rio.cattle.io/hash: 362023f752e7f1989d8b652e029bd2c658ae7c44
  annotations:
    meta.helm.sh/release-name: fleet-agent-local
    meta.helm.sh/release-namespace: cattle-fleet-local-system
    objectset.rio.cattle.io/applied: H4sIAAAAAAAA/3yOvW7rMAyF34Vz5JurxH/aO3RutyIDLdGJClo0LBaFYfjdC8FdumQRdPh9ODgbTKQYUBHcBpiSKGqUlEuU4ZO8ZtJqiVJ5VGWqovyLARyMTKQG75TUDCKadcHZHJI5IItHNnnNShPsJ2AciJ82PzA/wMGlsWd7GdvaUjv+77s+dENTWzrbfgjWN3WH1PrrtZQmnAgcBBrxi9Ugs3yXFw6UZ/SFPx2WZ/JlFt0Xyhncx7bfThDTnzhLeCMmr7KA2/Zy4OjX93Wm4sDrr36Cl+Nz2/efAAAA//9HYnBDXwEAAA
    objectset.rio.cattle.io/id: fleet-agent-bootstrap-cattle-fleet-local-system
spec:
  podSelector: {}
  ingress:
  - {}
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
apiVersion: <DOMAIN_128>/v1
kind: NetworkPolicy
